deployment/ceph_nano/nano/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload       
  name: ceph-nano
spec:
  port:
    targetPort: 8000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: ceph-nano-0
    weight: 100
